Remove unused data generator classes and introduce scripts for simplifying `ProcessorInfo` updates
- Delete redundant classes: `DataGenerator`, `SampleDataCreator`, `SampleDataStorageService`, and `SampleObjects`.
- Add `update_processor_info.sh` and `update_processor_info_multiline.sh` for streamlined updates to `ProcessorInfo` instantiation.
- Refactor test cases to align with the updated `ProcessorInfo` constructor format.
- Enhance test scenarios in `ValidationTestHelper`, `DesignValidationTest`, and `TestingValidationTest` for coverage.